A few fixes, once needed enhancement in production sites in LTS (calendar data) and usability improvements when in jquery mode to the module since_last_visit_new: [bp/r49563][ENH]Distinguish the active tab from the others in the module since_last_visit_new when in jquery mode. Lighter grey color, better contrast in admin modules >  edit (tabs). [adapted to Tiki9, since the css property has a different name] [bp/r49561][ENH]Added calendars and their events to the module since_last_visit_new. [bp/r49560][FIX]Distinguish between blogs and blog posts, and between file gals and files, with slightly different icons also [bp/r49557][MOD]Change icon for users from vcard (looks as if new contacts were added, in the feaure "contacts") to users indeed. [bp/r49555][FIX]Added the missing icon and code to display updated trackers in module since_last_visit_new in that fancy jquery mode (how come I didn't know during so many years about that jquery mode?). Updated the icon for new tracker items accordingly to distinguish it from the other. Extra pieces of images taken from openclipart (public domain svg's)
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/9.x@49573 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -1726,4 +1726,9 @@ form.simple textarea.export {
 	padding-left: 21px;
 }
 
+/* jquery-ui in since_last_visit */
+li.ui-state-active a { 
+	background:#CCCCCC; 
+}
+
 /* End of file */
